--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.45",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/revalidate": "^1.1.2",
+    "@types/uuid": "^8.0.1",
+    "axios": "^0.19.2",
+    "final-form": "^4.20.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.8",
+    "revalidate": "^1.2.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.1.1",
+    "semantic-ui-react-form-validator": "^1.0.2",
     "typescript": "^3.7.5"
   },
   "scripts": {
